@@ -258,22 +258,18 @@ exports.shouldCorrectlyQueryAfterPrimaryComesBackUp = function(test) {
         collection.insert({a:20}, {safe: {w:'majority', wtimeout: 10000}}, function(err, r) {
           // Kill the primary
           RS.killPrimary(9, {killNodeWaitTime:0}, function(node) {
-            console.log("%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 0")
             // Ok let's execute same query a couple of times
             collection.find({}).toArray(function(err, items) {
-              console.log("%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 1")
               test.ok(err != null);
               test.equal("connection closed", err.message);
 
               collection.find({}).toArray(function(err, items) {
-                console.log("%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 2")
                 test.ok(err != null);
 
                 collection.find({}).toArray(function(err, items) {
-                  console.log("%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 3")
                   test.ok(err == null);
                   test.equal(1, items.length);
-                  console.log("================================== dbCLOSE")
+
                   db.close(function() {
                     test.done();
                   });
