@@ -31,6 +31,8 @@
 - Fixed addUser to correctly handle changes in 2.2 for getLastError authentication required
 - Added index to gridstore chunks on file_id (Issue #649, https://github.com/jacobbubu)
 - Fixed Always emit db events (Issue #657)
+- Close event not correctly resets DB openCalled variable to allow reconnect
+- Added open event on connection established for replicaset, mongos and server
 
 1.0.2 2012-05-15
 ----------------
